# velo

./: .gitignore  CHANGELOG.md  PLUGINS.md  README.md  meson.build
completions/: tofi  velo
config/: config  palette_color_mapping.json
config/palettes/: adw.json  atuel.json  ayu-blue.json  ayu-green.json  ayu-red.json  ayu.json  breeze.json  catppuccin-lavender.json  catppuccin.json  cherry-blossom.json  cream-autumn.json  cream.json  creamy-forest.json  cyberpunk.json  doomed.json  dracula.json  eldritch.json  espresso-cream.json  everdeer.json  everforest.json  flexoki.json  github-dark.json  gruber-darker.json  gruvbox-material.json  gruvbox.json  gruvboxalt.json  hexa34c.json  horizon.json  kanagawa-dragon.json  kanagawa-paper.json  kanagawa.json  kemuri-koke.json  kemuri.json  lilac-amoled.json  matecito.json  miasma.json  mine.json  monochrome.json  murasaki.json  murata.json  (+21 more)
config/plugins/: calculator.toml  drun.toml  opencode.toml  url.toml
config/plugins/hyprland/: hyprland-focus.toml  hyprland-workspace.toml  hyprland.toml
config/plugins/testing/: test-ks-deep-action.toml  test-ks-deep-input.toml  test-ks-deep.toml  test-ks-input.toml  test-ks-select.toml  test-ks-static.toml  test-menu.toml
config/plugins/themes/: theme-hyprland.toml  theme-kitty.toml  theme-tofi.toml  theme-waybar.toml  theme.toml
config/plugins/tmux/: tmux-attach.toml  tmux-close.toml  tmux-cold-delete.toml  tmux-cold-recover.toml  tmux-cold-storage.toml  tmux-freeze.toml  tmux-new.toml  tmux-unfreeze.toml  tmux.toml
config/plugins/utils/: enter-password.toml
config/plugins/wifi/: list.sh  saved.sh  wifi-connect.toml  wifi-forget.toml  wifi-reconnect.toml  wifi.toml
config/themes/: cherry-blossom.toml  default.toml  dracula.toml  light.toml  tokyo-night.toml
doc/: config  hypr-tofi.1.scd  hypr-tofi.5.scd  palette.md  velo.1.scd  velo.5.scd
src/: builtin.c  builtin.h  config.c  config.h  desktop_vec.c  desktop_vec.h  drun.c  drun.h  input.c  input.h  json.c  json.h  log.c  log.h  main.c  matching.c  matching.h  nav.c  nav.h  palette.c  palette.h  plugin.c  plugin.h  renderer.h  renderer_cairo.c  string_vec.c  string_vec.h  tofi.h  unicode.c  unicode.h  velo.h  view.h
tests/: test_json.c
